added material-ui as a css library

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/cph-pc56-Projects/moldovin#readme",
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "next": "^7.0.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
