--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^7.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-bootstrap": "^1.0.0-beta.3",
     "react-dom": "^16.6.3"
   }
 }
