--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/cph-pc56-Projects/moldovin#readme",
   "dependencies": {
-    "@material-ui/core": "^3.5.1",
+    "@material-ui/core": "^3.6.1",
+    "@material-ui/icons": "^3.0.1",
     "@zeit/next-css": "^1.0.1",
     "next": "^7.0.2",
     "prop-types": "^15.6.2",
