--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-bootstrap": "^1.0.0-beta.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   }
 }
