--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "react-bootstrap": "^1.0.0-beta.3",
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
+    "react-responsive": "^6.0.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "save": "^2.3.3"
   }
 }
