--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
     "@zeit/next-css": "^1.0.1",
+    "axios": "^0.18.0",
     "next": "^7.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
